--- a/myimage/static/index.html
+++ b/myimage/static/index.html
@@ -3,7 +3,7 @@
         <title>GKE Trigger Demo</title>
     </head>
     <body>
-        Hello GKE Fans!
+        Hello GCP Fans!
         <br>
         Time: 15:53
     </body>
